@@ -4,6 +4,7 @@ v6.1.5-git
 
 [mms] SECURITY: Fix XSS when flagging a message in dynamic view with a
       user-defined flag (João Machado <geral@jpaulo.eu>).
+[mms] Fix manually loading all addresses in a header.
 [mms] Fix regression where reloading dynamic view would not load the previously
       selected message.
 [mms] Fixed regression in enforcing max_recipients and max_timelimit
